FCREPO-4029 - No truncating of indexes (#2263)
* Only trigger reindexing when requested by user with fcrepo.rebuild.continue, and never truncate tables. Removed fcrepo.rebuild.on.start since its behavior of truncating on startup is no longer present. Deleted some unused modeshape files.

* Log an error if ocfl root is missing from storage but is indexed

* Throw exception if root missing from index but ocfl is populated

* Remove check for populated OCFL

* Remove import

* Change to a log statement to see if that fixes IT

* Enable exception mapper

* Try clearing index

* Back to a log statement

* Add a new fcrepo.rebuild property to enable startup indexing. Log deprecation warnings if the old rebuild properties are supplied, but have them both trigger the same behavior as fcrepo.rebuild

* Checkstyle

* Fix property

* Add test for deprecation warnings

* checkstyle

* Debugging

* Revert "Debugging"

This reverts commit ae7d4abe0a77f95c902321bb6b84dae0e3fe3a96.

* Reset indexes before reindex IT

* Debugging again

* Undo debug

* Use rebuildEnabled instead of continue