@@ -6,6 +6,7 @@
 package org.fcrepo.persistence.ocfl.impl;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
@@ -77,99 +78,85 @@ public class IndexBuilderImplTest {
 
     @BeforeEach
     public void setup() {
-        // Default to not rebuild on start
-        when(fedoraPropsConfig.isRebuildOnStart()).thenReturn(false);
-        when(fedoraPropsConfig.isRebuildContinue()).thenReturn(false);
-
         when(ocflPropsConfig.getReindexingThreads()).thenReturn(1L);
         when(txManager.create()).thenReturn(transaction);
     }
 
     @Test
-    public void testRebuildIfNecessary_NoRebuildNeeded() throws Exception {
+    public void testRebuildIfNecessary_NoRebuildNeeded_RootPresent() throws Exception {
         // Configure root object to exist
         when(ocflIndex.getMapping(ReadOnlyTransaction.INSTANCE, FedoraId.getRepositoryRootId()))
                 .thenReturn(rootMapping);
         when(rootMapping.getOcflObjectId()).thenReturn(ROOT_OBJECT_ID);
         when(ocflRepository.containsObject(ROOT_OBJECT_ID)).thenReturn(true);
-
-        indexBuilder.rebuildIfNecessary();
-
-        // Verify no rebuild was performed
-        verify(reindexService, never()).reset();
-    }
-
-    @Test
-    public void testRebuildIfNecessary_RootMappingNotFound() throws Exception {
-        // Make the root mapping query throw a mapping not found exception
-        when(ocflIndex.getMapping(ReadOnlyTransaction.INSTANCE, FedoraId.getRepositoryRootId()))
-                .thenThrow(new FedoraOcflMappingNotFoundException("Not found"));
-
-        // Setup some test object IDs
-        mockObjectIds(List.of("obj1", "obj2"));
+        when(fedoraPropsConfig.isRebuildEnabled()).thenReturn(false);
 
         try (final var mockReindexManagers = Mockito.mockConstruction(ReindexManager.class)) {
             indexBuilder.rebuildIfNecessary();
 
-            verify(reindexService).reset();
-            final var mockReindexManager = mockReindexManagers.constructed().get(0);
-            verify(mockReindexManager).start();
-            verify(mockReindexManager).shutdown();
+            // Verify no rebuild was performed
+            verify(reindexService, never()).reset();
+            assertTrue(mockReindexManagers.constructed().isEmpty());
         }
     }
 
     @Test
-    public void testRebuildIfNecessary_RootObjectNotInOcfl() throws Exception {
+    public void testRebuildIfNecessary_NoRebuildNeeded_NoRoot() throws Exception {
+        // Configure root object to exist
+        when(ocflIndex.getMapping(ReadOnlyTransaction.INSTANCE, FedoraId.getRepositoryRootId()))
+                .thenThrow(new FedoraOcflMappingNotFoundException("Missing"));
+        when(ocflRepository.containsObject(ROOT_OBJECT_ID)).thenReturn(false);
+        when(fedoraPropsConfig.isRebuildEnabled()).thenReturn(false);
+
+        // No errors, but no reindex either
+        try (final var mockReindexManagers = Mockito.mockConstruction(ReindexManager.class)) {
+            indexBuilder.rebuildIfNecessary();
+
+            // Verify no rebuild was performed
+            verify(reindexService, never()).reset();
+            assertTrue(mockReindexManagers.constructed().isEmpty());
+        }
+    }
+
+    @Test
+    public void testRebuildIfNecessary_RootObjectNotInOcflButIndexed() throws Exception {
         // Configure root mapping exists, but object doesn't
         when(ocflIndex.getMapping(ReadOnlyTransaction.INSTANCE, FedoraId.getRepositoryRootId()))
                 .thenReturn(rootMapping);
         when(rootMapping.getOcflObjectId()).thenReturn(ROOT_OBJECT_ID);
         when(ocflRepository.containsObject(ROOT_OBJECT_ID)).thenReturn(false);
 
-        // Setup some test object IDs
-        mockObjectIds(List.of("obj1", "obj2"));
-
         try (final var mockReindexManagers = Mockito.mockConstruction(ReindexManager.class)) {
             indexBuilder.rebuildIfNecessary();
 
-            verify(reindexService).reset();
-            final var mockReindexManager = mockReindexManagers.constructed().get(0);
-            verify(mockReindexManager).start();
-            verify(mockReindexManager).shutdown();
+            // Verify no rebuild was performed
+            verify(reindexService, never()).reset();
+            assertTrue(mockReindexManagers.constructed().isEmpty());
         }
     }
 
     @Test
-    public void testRebuildIfNecessary_RebuildOnStartEnabled() throws Exception {
-        // Configure so there's a valid root mapping, but rebuild on start is true
-        when(ocflIndex.getMapping(ReadOnlyTransaction.INSTANCE, FedoraId.getRepositoryRootId()))
-                .thenReturn(rootMapping);
-        when(rootMapping.getOcflObjectId()).thenReturn(ROOT_OBJECT_ID);
-        when(ocflRepository.containsObject(ROOT_OBJECT_ID)).thenReturn(true);
-        when(fedoraPropsConfig.isRebuildOnStart()).thenReturn(true);
+    public void testRebuildIfNecessary_RebuildEnabled() throws Exception {
+        when(fedoraPropsConfig.isRebuildEnabled()).thenReturn(true);
 
-        // Setup some test object IDs
-        mockObjectIds(List.of("obj1", "obj2"));
-
-        try (final var mockReindexManagers = Mockito.mockConstruction(ReindexManager.class)) {
-            indexBuilder.rebuildIfNecessary();
-
-            verify(reindexService).reset();
-            final var mockReindexManager = mockReindexManagers.constructed().get(0);
-            verify(mockReindexManager).start();
-            verify(mockReindexManager).shutdown();
-        }
+        assertRebuildCompleted();
     }
 
     @Test
     public void testRebuildIfNecessary_RebuildContinueEnabled() throws Exception {
-        // Configure so there's a valid root mapping, but rebuild continue is true
-        when(ocflIndex.getMapping(ReadOnlyTransaction.INSTANCE, FedoraId.getRepositoryRootId()))
-                .thenReturn(rootMapping);
-        when(rootMapping.getOcflObjectId()).thenReturn(ROOT_OBJECT_ID);
-        when(ocflRepository.containsObject(ROOT_OBJECT_ID)).thenReturn(true);
         when(fedoraPropsConfig.isRebuildContinue()).thenReturn(true);
 
+        assertRebuildCompleted();
+    }
+
+    @Test
+    public void testRebuildIfNecessary_RebuildOnStartEnabled() throws Exception {
+        when(fedoraPropsConfig.isRebuildOnStart()).thenReturn(true);
+
+        assertRebuildCompleted();
+    }
+
+    private void assertRebuildCompleted() throws Exception {
         // Setup some test object IDs
         mockObjectIds(List.of("obj1", "obj2"));
 
@@ -178,7 +165,7 @@ public class IndexBuilderImplTest {
 
             // Verify rebuild was performed but reset was not called
             verify(reindexService, never()).reset();
-            final var mockReindexManager = mockReindexManagers.constructed().get(0);
+            final var mockReindexManager = mockReindexManagers.constructed().getFirst();
             verify(mockReindexManager).start();
             verify(mockReindexManager).shutdown();
         }
